--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
     "jest": "^29.7.0",
